@startuml Wissenstest_01_Model_Klassen
!theme plain
skinparam classBackgroundColor #E8F4F8
skinparam classBorderColor #0066CC
skinparam classArrowColor #0066CC
skinparam fontSize 11

title Wissenstest - Klassendiagramm Teil 1: Model-Klassen und Enums

' ==================== ENUMS ====================
enum QuestionType {
  MC
  CLOZE
}

enum Role {
  STUDENT
  TEACHER
  ADMIN
}

' ==================== MODEL CLASSES ====================
class User {
  -id: int
  -username: String
  -password: String (hashed)
  -role: Role
  -email: String
  -isActive: boolean
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
  --
  +getId(): int
  +getUsername(): String
  +setPassword(String): void
  +getRole(): Role
  +getEmail(): String
  +isActive(): boolean
  +getCreatedAt(): LocalDateTime
  +setEmail(String): void
  +setRole(Role): void
}

class Question {
  -id: int
  -text: String
  -type: QuestionType
  -difficulty: String
  -createdBy: User
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
  --
  +getId(): int
  +getText(): String
  +setText(String): void
  +getType(): QuestionType
  +setType(QuestionType): void
  +getDifficulty(): String
  +setDifficulty(String): void
  +getCreatedBy(): User
  +getCreatedAt(): LocalDateTime
}

class AnswerOption {
  -id: int
  -question: Question
  -text: String
  -isCorrect: boolean
  -optionOrder: int
  --
  +getId(): int
  +getQuestion(): Question
  +getText(): String
  +setText(String): void
  +isCorrect(): boolean
  +setCorrect(boolean): void
  +getOptionOrder(): int
  +setOptionOrder(int): void
}

class ClozeToken {
  -id: int
  -question: Question
  -tokenText: String
  -originalText: String
  -position: int
  --
  +getId(): int
  +getQuestion(): Question
  +getTokenText(): String
  +getOriginalText(): String
  +getPosition(): int
  +matchesToken(String): boolean
  +matchesCaseInsensitive(String): boolean
}

class Test {
  -id: int
  -title: String
  -description: String
  -createdBy: User
  -timeLimit: int (seconds)
  -passingScore: int (percent)
  -questions: List<Question>
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
  --
  +getId(): int
  +getTitle(): String
  +setTitle(String): void
  +getDescription(): String
  +setDescription(String): void
  +getCreatedBy(): User
  +getTimeLimit(): int
  +setTimeLimit(int): void
  +getPassingScore(): int
  +setPassingScore(int): void
  +getQuestions(): List<Question>
  +addQuestion(Question): void
  +removeQuestion(Question): void
  +getQuestionCount(): int
}

class Attempt {
  -id: int
  -user: User
  -test: Test
  -startedAt: LocalDateTime
  -completedAt: LocalDateTime
  -score: int
  -percentage: double
  -passed: boolean
  -grade: String
  -answers: List<AttemptAnswer>
  --
  +getId(): int
  +getUser(): User
  +getTest(): Test
  +getStartedAt(): LocalDateTime
  +getCompletedAt(): LocalDateTime
  +complete(): void
  +getScore(): int
  +setScore(int): void
  +getPercentage(): double
  +setPercentage(double): void
  +isPassed(): boolean
  +setPassed(boolean): void
  +getGrade(): String
  +setGrade(String): void
  +addAnswer(AttemptAnswer): void
  +getAnswers(): List<AttemptAnswer>
  +getDurationInSeconds(): int
}

class AttemptAnswer {
  -id: int
  -attempt: Attempt
  -question: Question
  -answerText: String
  -isCorrect: boolean
  -createdAt: LocalDateTime
  --
  +getId(): int
  +getAttempt(): Attempt
  +getQuestion(): Question
  +getAnswerText(): String
  +setAnswerText(String): void
  +isCorrect(): boolean
  +setCorrect(boolean): void
  +getCreatedAt(): LocalDateTime
}

' ==================== RELATIONSHIPS ====================
QuestionType --* Question : type
Role --* User : role

User --o "*" Test : creates
User --o "*" Attempt : takes
User --o "*" Question : creates

Question --o "*" AnswerOption : has
Question --o "*" ClozeToken : has
Question --* "*" Test : contains

Test --o "*" Attempt : has

Attempt --o "*" AttemptAnswer : records

AttemptAnswer --> Question : references

note right of User
  Beschreibung:
  Repräsentiert einen Benutzer
  des Systems.
  
  Rollen:
  - STUDENT: Kann Tests machen
  - TEACHER: Kann Tests erstellen
  - ADMIN: Verwaltung
end note

note right of Question
  Beschreibung:
  Eine Testfrage mit Typ,
  Schwierigkeit und Inhalten.
  
  Typen:
  - MC: Multiple Choice
  - CLOZE: Lückentext
  
  Schwierigkeit:
  - EASY, MEDIUM, HARD
end note

note right of Test
  Beschreibung:
  Ein Test besteht aus mehreren
  Fragen. Enthält Konfigurationen
  wie Zeitlimit und Bestehensgrenze.
end note

note right of Attempt
  Beschreibung:
  Ein Testversuch eines Benutzers.
  Speichert alle Antworten und
  das Ergebnis.
end note

@enduml
